      When debconf-loadtemplate reads templates files, the default
      behavior is to replace existing templates with the new
      definitions.  With this flag, translations are added to already
      existing templates.  But if English text differs, outdated
      translations are removed as if this flag was unset.
      Closes: #212921

 -- Joey Hess <joeyh@debian.org>  Thu,  1 Apr 2004 19:48:24 -0500

cdebconf (0.59) unstable; urgency=low

  * Joey Hess
    - Mark udebs as such in the control file, so debconf doesn't mark
      conffiles. Did not finish conversion to new simpler rules file
      using new debhelper udeb features.

 -- Joey Hess <joeyh@debian.org>  Thu,  1 Apr 2004 16:58:34 -0500

cdebconf (0.58) unstable; urgency=low

  * Denis Barbier
    - Major improvements to the text frontend:
      + '\r' is not supported by all terminals, which made progress bars
        unreadable.  The display is now:
          Progress bar title ..20%..40%..60%..80%..100%
        Closes: #195704
      + Add support for backing up.  Closes: #183107
      + For most questions, prints the short description below the extended
        one.
      + String and passwd questions accept an empty answer.
      + A contextual help message is available at prompt.
      + Progress bar refresh is set to a minimum of 10% to prevent
        too verbose output.
      + Select and multiselect questions look now more like debconf
        readline questions.
      + Define a ISEMPTY macro to deal with empty strings on s390.
    - The previous fix about the seen flag broke when a package is
      left half-configured.  To prevent this problem, the seen
      flag is never written to the questions.dat file (for cdebconf-udeb
      only) as suggested by Joey Hess.  Closes: #229648
    - Add a --enable-d-i flag to the configure script, invoked when
      building cdebconf-udeb.  This option add -DDI_UDEB to CFLAGS.
  * Bastian Blank
    - Fix recognition of return in note.