@@ -14,6 +14,8 @@ cdebconf (0.60) UNRELEASED; urgency=low
       existing templates.  But if English text differs, outdated
       translations are removed as if this flag was unset.
       Closes: #212921
+    - Fix newt.c so that debian/cdebconf-newt-udeb.templates is generated
+      from source files.
 
  -- Joey Hess <joeyh@debian.org>  Thu,  1 Apr 2004 19:48:24 -0500
 
